--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <!--Meta tags-->
     <meta charset="UTF-8">
     <meta name="author" content="Hannah Anderson">
-    <meta name="keywords" content="Hannah Anderson, CSE204A, Final, Trivia, Jeopardy">
-    <meta name="description" content="Hannah Anderson's CSE 204A Final: Jeoparody!">
+    <meta name="keywords" content="Hannah Anderson, CSE204A, Final, Trivia, Film, Movies, Cinema">
+    <meta name="description" content="Hannah Anderson's CSE 204A Final: Movie ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>CSE204A Final: Jeoparody!</title>
@@ -20,23 +20,16 @@
       <div id="game">
         <h1>Trivia</h1>
         <div id="pregame">
-          Welcome to Jeoparody! Are you ready to play?
-          <div id="start"><button id=startbtn>Start Game</button></div>
+          <form id="numqform" method="GET">
+            How many questions would you like? <input type="text" name="desiredq" id="desiredqcount" value=""><br><br>
+            <input type="button" value="Start Game" id=startbtn onClick = "getPlays(this.form)">
+          </form>
         </div>
         <div id="inprogress">
-          <div id="category"></div>
           <div id="question"></div>
-          <div id="answer">
-            <button id="answerbtn">Reveal Answer</button>
+          <div id="answers"></div>
+          <div id="score">
           </div>
-          <div id="response">
-            <button id=rightbtn>I was correct!</button>
-            <button id=wrongbtn>I was wrong!</button>
-          </div>
-          <div id="end">
-            <button id=endbtn>End Game</button>
-          </div>
-          <div id="score"></div>
         </div>
         <div id="gameover">
         </div>
