--- a/index.html
+++ b/index.html
@@ -53,7 +53,38 @@
       </div>
     </header>
 
-    <div class="restofpage">
+    <div class="restofpage" id="sec1">
+    </div>
+
+      <!--Carousel code from https://getbootstrap.com/docs/4.0/components/carousel/-->
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"> <!--Start of carousel-->
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="slide1.png" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="slide2.png" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="slide3.png" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div> <!--End of carousel-->
+      
+    <div class="restofpage" id="sec2">
       <div class="container" id="gamewrap"> <!--start gamewrap-->
         <div id="game">
           <h1>Trivia</h1>
@@ -76,6 +107,7 @@
           </div>
         </div>
       </div> <!--end gamewrap-->
+
     </div>
     <!--Link to personal JS-->
     <script src="main.js"></script>
