--- a/index.html
+++ b/index.html
@@ -56,34 +56,67 @@
     <div class="restofpage" id="sec1">
     </div>
 
-      <!--Carousel code from https://getbootstrap.com/docs/4.0/components/carousel/-->
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"> <!--Start of carousel-->
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="slide1.png" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="slide2.png" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="slide3.png" alt="Third slide">
+    <!--Carousel base code from https://getbootstrap.com/docs/4.0/components/carousel/-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="slide3.png" alt="First slide">
+          <div class="carousel-caption">
+            <h5><i>Breakfast at Tiffany's</i></h5>
+            <p><i>Breakfast at Tiffany's</i> was the first time the jewelry store, Tiffany's, was used as a filming location.</p>
+            <!--Fact from https://www.theodysseyonline.com/facts-breakfast-tiffanys-->
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div> <!--End of carousel-->
-      
+        <div class="carousel-item">
+          <img class="d-block w-100" src="slide2.png" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="slide1.png" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="slide1.png" alt="Fourth slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="slide1.png" alt="Fifth slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="slide1.png" alt="Sixth slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="slide1.png" alt="Seventh slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="slide1.png" alt="Eighth slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="slide1.png" alt="Ninth slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="slide1.png" alt="Tenth slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
     <div class="restofpage" id="sec2">
       <div class="container" id="gamewrap"> <!--start gamewrap-->
         <div id="game">
@@ -109,7 +142,12 @@
       </div> <!--end gamewrap-->
 
     </div>
+
     <!--Link to personal JS-->
     <script src="main.js"></script>
+    <!--Bootstrap Inclusion-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
