--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Hannah Anderson">
     <meta name="keywords" content="Hannah Anderson, CSE204A, Final, Trivia, Film, Movies, Cinema">
-    <meta name="description" content="Hannah Anderson's CSE 204A Final: Movie Trivia">
+    <meta name="description" content="Hannah Anderson's CSE 204A Final: Film Facts">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>CSE204A Final: Film Facts</title>
@@ -74,37 +74,82 @@
         <div class="carousel-item active">
           <img class="d-block w-100" src="slide3.png" alt="First slide">
           <div class="carousel-caption">
-            <h5><i>Breakfast at Tiffany's</i></h5>
+            <h5><i>Breakfast at Tiffany's</i> (1961)</h5>
             <p><i>Breakfast at Tiffany's</i> was the first time the jewelry store, Tiffany's, was used as a filming location.</p>
             <!--Fact from https://www.theodysseyonline.com/facts-breakfast-tiffanys-->
           </div>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="slide2.png" alt="Second slide">
+          <div class="carousel-caption">
+            <h5><i>When Harry Met Sally</i> (1989)</h5>
+            <p>The very famous fake orgasm scene was filmed at Katz's Deli on New York's E. Houston Street. The table where the scene was filmed now has a sign above it that reads, "Where Harry met Sally... hope you have what she had!"</p>
+            <!--Fact from https://www.zimbio.com/Beyond+the+Box+Office/articles/bjI3wpN7dhf/25+Things+Never+Knew+Harry+Met+Sally-->
+          </div>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="slide1.png" alt="Third slide">
+          <div class="carousel-caption">
+            <h5><i>The Godfather</i> (1972)</h5>
+            <p>Marlon Brando did not memorize most of his lines and read from cue cards during most of the film.</p>
+            <!--Fact from https://www.tickld.com/wow/2147150/ttr45-little-known-facts-about-the-godfather/-->
+          </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="slide1.png" alt="Fourth slide">
+          <img class="d-block w-100" src="slide4.png" alt="Fourth slide">
+          <div class="carousel-caption">
+            <h5><i>Star Wars: Episode V - The Empire Strikes Back</i> (1980)</h5>
+            <p>Harrison Ford, the actor who played Han Solo, is 6'1", whereas Carrie Fisher, the actress who played Leia, is only 5'1". In order to make the two look closer in height, Fisher usually had to stand on a box while filming her scenes with Ford.</p>
+            <!--Fact from https://vocal.media/futurism/10-fun-facts-about-the-empire-strikes-back-->
+          </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="slide1.png" alt="Fifth slide">
+          <img class="d-block w-100" src="slide5.png" alt="Fifth slide">
+          <div class="carousel-caption">
+            <h5><i>Legally Blonde</i> (2001)</h5>
+            <p>The graduation scene at the end was added after feedback from test audiences. Initially, the movie ended with Reese Witherspoon and Luke Wilson kissing on the courthouse steps, then cutting to Elle Woods and Vivian forming a “Blonde Legal Defense Club.”</p>
+            <!--Fact from https://www.mentalfloss.com/article/66044/15-snappy-facts-about-legally-blonde-->
+          </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="slide1.png" alt="Sixth slide">
+          <img class="d-block w-100" src="slide6.png" alt="Sixth slide">
+          <div class="carousel-caption">
+            <h5><i>Toy Story</i> (1995)</h5>
+            <p>Ohio Art Company, the company that makes Etch A Sketch, was nearly bankrupt before <i>Toy Story</i>. After they allowed Etch to be in the film, they saw a 20% sales increase that saved the company.</p>
+            <!--Fact from http://www.mtv.com/news/2352206/toy-story-21-things-you-never-knew/-->
+          </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="slide1.png" alt="Seventh slide">
+          <img class="d-block w-100" src="slide7.png" alt="Seventh slide">
+          <div class="carousel-caption">
+            <h5><i>Hidden Figures</i> (2016)</h5>
+            <p>Taraji P. Henson was the only actress of the three leading ladies who had the opportunity to meet her real-life counterpart, Katherine Johnson. Mary Jackson and Dorothy Vaughan passed away in 2005 and 2008, respectively.</p>
+            <!--Fact from https://people.com/awards/hidden-figures-fun-facts/-->
+          </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="slide1.png" alt="Eighth slide">
+          <img class="d-block w-100" src="slide8.png" alt="Eighth slide">
+          <div class="carousel-caption">
+            <h5><i>Get Out</i> (2017)</h5>
+            <p>Director Jordan Peele provided the moan of the dying deer at the beginning of the film, as well as the voice of the narrator for the United Negro College Fund PSA, who keeps insisting that “a mind is a terrible thing to waste.”</p>
+            <!--Fact from https://www.mentalfloss.com/article/527409/10-fast-facts-about-get-out-->
+          </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="slide1.png" alt="Ninth slide">
+          <img class="d-block w-100" src="slide9.png" alt="Ninth slide">
+          <div class="carousel-caption">
+            <h5><i>Rocky</i> (1976)</h5>
+            <p>With the idea for <i>Rocky</i> in his head for almost a year after witnessing a Muhammad Ali fight, Sylvester Stallone spent about 84 hours using a pad and a pen to write the first draft of Rocky.</p>
+            <!--Fact from https://www.mentalfloss.com/article/71528/16-heavy-hitting-facts-about-rocky-movies-->
+          </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="slide1.png" alt="Tenth slide">
+          <img class="d-block w-100" src="slide10.png" alt="Tenth slide">
+          <div class="carousel-caption">
+            <h5><i>The Silence of the Lambs</i> (1991)</h5>
+            <p>Anthony Hopkins insisted that Hannibal Lecter always wear white. His reasoning was that he was hoping to play on the fear that many people already have of doctors and dentists.</p>
+            <!--Fact from https://www.eightieskids.com/chilling-facts-silence-lambs/-->
+          </div>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
