--- a/index.html
+++ b/index.html
@@ -204,30 +204,39 @@
     <a id="factjump"></a>
 
     <div class="restofpage" id="factsect">
+      <div class="content" id="facts">
+        <h1>Fun Facts</h1>
+      </div>
     </div>
 
     <a id="resourcejump"></a>
 
     <div class="restofpage" id="resourcesect">
+      <div class="content" id="resources">
+        <h1>Resource Reserve</h1>
+      </div>
     </div>
 
     <a id="contactjump"></a>
 
     <div class="restofpage" id="contactsect">
+      <div class="content" id="contact">
+        <h1>Contact Us</h1>
+      </div>
     </div>
 
     <!-- Footer -->
     <div class="restofpage" id="bottom">
-      <div class="socials">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-youtube"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-instagram"></a>
-      </div>
-      <div class=copyright>
-        © 2020 Copyright:
-        <a href="#"> FilmFacts.com</a>
-      </div>
+        <div class="socials">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-youtube"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-instagram"></a>
+        </div>
+        <div class=copyright>
+          © 2020 Copyright:
+          <a href="#"> FilmFacts.com</a>
+        </div>
     </div>
     <!--Link to personal JS-->
     <script src="main.js"></script>
