added social media sharing functionality

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <!--Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <!--Link to personal stylesheet-->
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -202,6 +204,10 @@
           </div>
           <div id="playagain">
             <button id="againbtn">Play Again</button>
+          </div>
+          <div class="sharelinks" id=sharescore>
+            <button class="social-share facebook" id="fbbtn">Share on Facebook</button>
+            <button class="social-share twitter" id="twbtn">Share on Twitter</button>
           </div>
         </div>
       </div> <!--end gamewrap-->
