--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!--Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <!--Link to personal stylesheet-->
@@ -166,7 +166,8 @@
       <div class="content" id="welcome">
         <h1>Welcome to the Jungle</h1>
         <div class="internal" id="welcomep1">
-          Welcome to Film Facts, film fanatics' favorite corner of the internet.
+          Welcome to Film Facts, film fanatics' favorite corner of the internet. Here you can find facts about your favorite movies,
+          a consolidated list of movie resources to continue your research, and a quiz to test your knowledge!
         </div>
       </div>
     </div>
