working on box office

--- a/index.html
+++ b/index.html
@@ -169,6 +169,22 @@
           Welcome to Film Facts, film fanatics' favorite corner of the internet. Here you can find facts about your favorite movies,
           a consolidated list of movie resources to continue your research, and a quiz to test your knowledge!
         </div>
+        <h3>2020 Domestic Box Office Stats</h3>
+        <div class="internal" id="boxofficeintro">
+          See below for the most up-to-date data on this year's highest-grossing films.
+        </div>
+        <figure id="topbox">
+          <img src="BadBoysForLife.jpg" alt="Bad Boys For Life" id="badboys" />
+          <figcaption id="badboyscap">Sony's <i>Bad Boys For Life</i> is still on top.</figcaption>
+        </figure>
+        <div class="internal" id="boxofficetable">
+        </div>
+        <div class="internal" id="covid">
+          <span id="note">NOTE:</span> With the exception of some drive-in movie theaters, cinemas across the U.S. have been closed since
+          March 17, 2020 due to the coronavirus pandemic. The global box office has dropped by billions of dollars, and many films
+          scheduled to be released this year have been postponed or cancelled. Thus, our current data is only reflective of the pre-pandemic
+          box office.
+        </div>
       </div>
     </div>
 
@@ -180,7 +196,7 @@
         <h1>Trivia Game</h1>
         <div class="internal" id="instructions">
           Do you have a genius-level IQ, like Will Hunting, when it comes to movie trivia? Try your hand at Film Facts' trivia game, built
-          via the Open Trivia Database. Playing is simple. Just choose your difficulty level and question quantity (must be between 1 and 20),
+          via the <a href="https://opentdb.com" target="_blank">Open Trivia Database</a>. Playing is simple. Just choose your difficulty level and question quantity (must be between 1 and 20),
           and you're off to the races! Best of luck!
         </div>
         <div class="content" id="game">
