data in box office table, some styling

--- a/index.html
+++ b/index.html
@@ -171,13 +171,104 @@
         </div>
         <h3>2020 Domestic Box Office Stats</h3>
         <div class="internal" id="boxofficeintro">
-          See below for the most up-to-date data on this year's highest-grossing films.
+          See below for the most up-to-date data on this year's highest-grossing films. Each movie is linked to a trailer for your viewing pleasure.
         </div>
         <figure id="topbox">
           <img src="BadBoysForLife.jpg" alt="Bad Boys For Life" id="badboys" />
           <figcaption id="badboyscap">Sony's <i>Bad Boys For Life</i> is still on top.</figcaption>
         </figure>
         <div class="internal" id="boxofficetable">
+          <!--Data from https://www.boxofficemojo.com/year/2020/?ref_=bo_hm_yrdom-->
+          <table>
+            <tr id="boxofficetabletop">
+              <th>Rank</th>
+              <th>Film</th>
+              <th>2020 Gross</th>
+              <th>Total Gross</th>
+              <th>Release Date</th>
+              <th>Distributor</th>
+            </tr>
+            <tr id="rank1">
+              <td class="borank">1</td>
+              <td class="bofilmtitle">Bad Boys For Life</td>
+              <td class="bo2020gross">$204,417,855</td>
+              <td class="bototalgross">$204,417,855</td>
+              <td class="boreleasedate">01/17/20</td>
+              <td class="bodistributor">Sony Pictures Releasing</td>
+            </tr>
+            <tr id="rank2">
+              <td class="borank">2</td>
+              <td class="bofilmtitle">1917</td>
+              <td class="bo2020gross">$157,901,466</td>
+              <td class="bototalgross">$159,227,644</td>
+              <td class="boreleasedate">12/25/19</td>
+              <td class="bodistributor">Universal Pictures</td>
+            </tr>
+            <tr id="rank3">
+              <td class="borank">3</td>
+              <td class="bofilmtitle">Sonic the Hedgehog</td>
+              <td class="bo2020gross">$146,066,470</td>
+              <td class="bototalgross">$146,066,470</td>
+              <td class="boreleasedate">02/14/20</td>
+              <td class="bodistributor">Paramount Pictures</td>
+            </tr>
+            <tr id="rank4">
+              <td class="borank">4</td>
+              <td class="bofilmtitle">Jumanji: The Next Level</td>
+              <td class="bo2020gross">$124,736,710</td>
+              <td class="bototalgross">$316,831,246</td>
+              <td class="boreleasedate">12/13/19</td>
+              <td class="bodistributor">Sony Pictures Releasing</td>
+            </tr>
+            <tr id="rank5">
+              <td class="borank">5</td>
+              <td class="bofilmtitle">Star Wars: Episode IX - The Rise of Skywalker</td>
+              <td class="bo2020gross">$124,496,308</td>
+              <td class="bototalgross">$515,202,542</td>
+              <td class="boreleasedate">12/20/19</td>
+              <td class="bodistributor">Walt Disney Studios Motion Pictures</td>
+            </tr>
+            <tr id="rank6">
+              <td class="borank">6</td>
+              <td class="bofilmtitle">Birds of Prey: And the Fantabulous Emancipation of One Harley Quinn</td>
+              <td class="bo2020gross">$84,158,461</td>
+              <td class="bototalgross">$84,158,461</td>
+              <td class="boreleasedate">02/07/20</td>
+              <td class="bodistributor">Warner Bros.</td>
+            </tr>
+            <tr id="rank7">
+              <td class="borank">7</td>
+              <td class="bofilmtitle">Dolittle</td>
+              <td class="bo2020gross">$77,047,065</td>
+              <td class="bototalgross">$77,047,065</td>
+              <td class="boreleasedate">01/17/20</td>
+              <td class="bodistributor">Universal Pictures</td>
+            </tr>
+            <tr id="rank8">
+              <td class="borank">8</td>
+              <td class="bofilmtitle">Little Women</td>
+              <td class="bo2020gross">$70,508,087</td>
+              <td class="bototalgross">$108,101,214</td>
+              <td class="boreleasedate">12/25/19</td>
+              <td class="bodistributor">Sony Pictures Releasing</td>
+            </tr>
+            <tr id="rank9">
+              <td class="borank">9</td>
+              <td class="bofilmtitle">The Invisible Man</td>
+              <td class="bo2020gross">$64,914,050</td>
+              <td class="bototalgross">$64,914,050</td>
+              <td class="boreleasedate">02/28/20</td>
+              <td class="bodistributor">Universal Pictures</td>
+            </tr>
+            <tr id="rank10">
+              <td class="borank">10</td>
+              <td class="bofilmtitle">The Call of the Wild</td>
+              <td class="bo2020gross">$62,342,368</td>
+              <td class="bototalgross">$62,342,368</td>
+              <td class="boreleasedate">02/21/20</td>
+              <td class="bodistributor">Twentieth Century Fox</td>
+            </tr>
+          </table>
         </div>
         <div class="internal" id="covid">
           <span id="note">NOTE:</span> With the exception of some drive-in movie theaters, cinemas across the U.S. have been closed since
