--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </tr>
             <tr id="rank1">
               <td class="borank">1</td>
-              <td class="bofilmtitle">Bad Boys For Life</td>
+              <td class="bofilmtitle"><a href="https://www.youtube.com/watch?v=jKCj3XuPG8M" target="_blank">Bad Boys For Life</a></td>
               <td class="bo2020gross">$204,417,855</td>
               <td class="bototalgross">$204,417,855</td>
               <td class="boreleasedate">01/17/20</td>
@@ -198,7 +198,7 @@
             </tr>
             <tr id="rank2">
               <td class="borank">2</td>
-              <td class="bofilmtitle">1917</td>
+              <td class="bofilmtitle"><a href="https://www.youtube.com/watch?v=gZjQROMAh_s" target="_blank">1917</a></td>
               <td class="bo2020gross">$157,901,466</td>
               <td class="bototalgross">$159,227,644</td>
               <td class="boreleasedate">12/25/19</td>
@@ -206,7 +206,7 @@
             </tr>
             <tr id="rank3">
               <td class="borank">3</td>
-              <td class="bofilmtitle">Sonic the Hedgehog</td>
+              <td class="bofilmtitle"><a href="https://www.youtube.com/watch?v=szby7ZHLnkA" target="_blank">Sonic the Hedgehog</a></td>
               <td class="bo2020gross">$146,066,470</td>
               <td class="bototalgross">$146,066,470</td>
               <td class="boreleasedate">02/14/20</td>
@@ -214,7 +214,7 @@
             </tr>
             <tr id="rank4">
               <td class="borank">4</td>
-              <td class="bofilmtitle">Jumanji: The Next Level</td>
+              <td class="bofilmtitle"><a href="https://www.youtube.com/watch?v=rBxcF-r9Ibs" target="_blank">Jumanji: The Next Level</a></td>
               <td class="bo2020gross">$124,736,710</td>
               <td class="bototalgross">$316,831,246</td>
               <td class="boreleasedate">12/13/19</td>
@@ -222,7 +222,7 @@
             </tr>
             <tr id="rank5">
               <td class="borank">5</td>
-              <td class="bofilmtitle">Star Wars: Episode IX - The Rise of Skywalker</td>
+              <td class="bofilmtitle"><a href="https://www.youtube.com/watch?v=8Qn_spdM5Zg" target="_blank">Star Wars: Episode IX - The Rise of Skywalker</a></td>
               <td class="bo2020gross">$124,496,308</td>
               <td class="bototalgross">$515,202,542</td>
               <td class="boreleasedate">12/20/19</td>
@@ -230,7 +230,7 @@
             </tr>
             <tr id="rank6">
               <td class="borank">6</td>
-              <td class="bofilmtitle">Birds of Prey: And the Fantabulous Emancipation of One Harley Quinn</td>
+              <td class="bofilmtitle"><a href="https://www.youtube.com/watch?v=kGM4uYZzfu0" target="_blank">Birds of Prey: And the Fantabulous Emancipation of One Harley Quinn</a></td>
               <td class="bo2020gross">$84,158,461</td>
               <td class="bototalgross">$84,158,461</td>
               <td class="boreleasedate">02/07/20</td>
@@ -238,7 +238,7 @@
             </tr>
             <tr id="rank7">
               <td class="borank">7</td>
-              <td class="bofilmtitle">Dolittle</td>
+              <td class="bofilmtitle"><a href="https://www.youtube.com/watch?v=zjm6rDgKNMY" target="_blank">Dolittle</a></td>
               <td class="bo2020gross">$77,047,065</td>
               <td class="bototalgross">$77,047,065</td>
               <td class="boreleasedate">01/17/20</td>
@@ -246,7 +246,7 @@
             </tr>
             <tr id="rank8">
               <td class="borank">8</td>
-              <td class="bofilmtitle">Little Women</td>
+              <td class="bofilmtitle"><a href="https://www.youtube.com/watch?v=AST2-4db4ic" target="_blank">Little Women</a></td>
               <td class="bo2020gross">$70,508,087</td>
               <td class="bototalgross">$108,101,214</td>
               <td class="boreleasedate">12/25/19</td>
@@ -254,7 +254,7 @@
             </tr>
             <tr id="rank9">
               <td class="borank">9</td>
-              <td class="bofilmtitle">The Invisible Man</td>
+              <td class="bofilmtitle"><a href="https://www.youtube.com/watch?v=Pso0Aj_cTh0" target="_blank">The Invisible Man</a></td>
               <td class="bo2020gross">$64,914,050</td>
               <td class="bototalgross">$64,914,050</td>
               <td class="boreleasedate">02/28/20</td>
@@ -262,7 +262,7 @@
             </tr>
             <tr id="rank10">
               <td class="borank">10</td>
-              <td class="bofilmtitle">The Call of the Wild</td>
+              <td class="bofilmtitle"><a href="https://www.youtube.com/watch?v=5P8R2zAhEwg" target="_blank">The Call of the Wild</a></td>
               <td class="bo2020gross">$62,342,368</td>
               <td class="bototalgross">$62,342,368</td>
               <td class="boreleasedate">02/21/20</td>
